# ChatServiceSocketCpp

./: .gitignore  .gitlab-ci.yml  Dockerfile  README  deployment_server.yaml  docker-compose.yml  document_microk8s.txt  init.sql  kubeclear  mysql_deployment.yaml  server.yaml  testcase_example.py
client/Mf/: CMakeLists.txt
client/Util/: util.h
client/models/: package.h  readme  user.cpp  user.h
client/service/: Makefile  bash  client.cpp  client.h  config.h  main.cpp  readme
server/: Dockerfile  bash  init.sql
server/Mf/: CMakeLists.txt
server/Util/: util.cpp  util.h
server/config/: backup.sql  database-requirement  proc_file  readme
server/models/: Room.cpp  Room.h  commonStruct.h  message.h  package.h  readme  user.cpp  user.h
server/responsibility/: MySQLAccess.cpp  MySQLAccess.h  messagesDA.cpp  messagesDA.h  readme  rolesDA.cpp  rolesDA.h  roomsDA.cpp  roomsDA.h  usersDA.cpp  usersDA.h
server/service/: Makefile  bash  databaseAccess.cpp  databaseAccess.h  main.cpp  readme  sock_connect.cpp  sock_connect.h
test/: runner.py  test_back.py  test_create_room.py  test_create_user.py  test_delete_room.py  test_delete_user.py  test_find_user.py  test_join.py  test_login.py  test_modify_room.py  test_modify_user.py  test_reconnect.py  test_show_User.py  test_show_list_room.py  test_with.py
